force-app/main/default/objects/Cuidarnos_SMS__mdt/Cuidarnos_SMS__mdt.object-meta.xml
<CustomObject>
    <label>Cuidarnos SMS</label>
    <pluralLabel>Cuidarnos SMSs</pluralLabel>
</CustomObject>