force-app/main/default/objects/Cuidarnos_SMS__mdt/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>