force-app/main/default/objects/Cuidarnos_SMS__mdt/fields/Send_to_all__c.field-meta.xml
<CustomField>
    <fullName>Send_to_all__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to all</label>
    <type>Checkbox</type>
</CustomField>