force-app/main/default/objects/Cuidarnos_SMS__mdt/listViews/Filtros_Cuidarnos.listView-meta.xml
<ListView>
    <fullName>Filtros_Cuidarnos</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field__c</columns>
    <columns>Priority__c</columns>
    <columns>Send_to_all__c</columns>
    <columns>Conditions__c</columns>
    <filterScope>Everything</filterScope>
    <label>Filtros Cuidarnos</label>
    <language>en_US</language>
</ListView>